--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "ramsey/uuid": "^4.0",
         "illuminate/filesystem": "^9.0",
         "illuminate/support": "^9.0",
-        "illuminate/database": "^9.0"
+        "illuminate/database": "^9.0",
+        "league/flysystem-aws-s3-v3": "^3.0"
     },
     "autoload": {
         "psr-4": {
